--- a/waybar/config
+++ b/waybar/config
@@ -3,7 +3,23 @@
   "position": "top",
   "reload_style_on_change": true,
 
-  "modules-left": ["clock"],
+  "modules-left": ["network", "memory", "cpu"],
+  "network": {
+    "format-wifi": " 󰤨 {essid} ",
+    "format-ethernet": " Wired ",
+    "tooltip-format": "<span color='#FF1493'> 󰅧 </span>{bandwidthUpBytes}  <span color='#00BFFF'> 󰅢 </span>{bandwidthDownBytes}",
+    "format-linked": " 󱘖 {ifname} (No IP) ",
+    "format-disconnected": "  Disconnected ",
+    "format-alt": " 󰤨 {signalStrength}% ",
+    "interval": 1
+  },
+  "memory": {
+    "format": "  {used:0.1f}G/{total:0.1f}G ",
+  },
+  "cpu": {
+    "format": "  {usage}% ",
+    "tooltip": true
+  },
 
   "modules-center": ["hyprland/workspaces"],
   "hyprland/workspaces": {
@@ -17,7 +33,28 @@
       }
     },
 
-  "modules-right": ["clock"],
+  "modules-right": ["pulseaudio", "battery", "clock"],
+  "pulseaudio": {
+    "format": "{icon}{volume}% ",
+    "format-muted": " 󰖁 0% ",
+    "format-icons": {
+      "headphone": "  ",
+      "hands-free": "  ",
+      "headset": "  ",
+      "phone": "  ",
+      "portable": "  ",
+      "car": "  ",
+      "default": [
+        "  ",
+        "  ",
+        "  "
+      ]
+    },
+  },
+  "battery": {
+    "format": "{capacity} {icon}",
+    "format-icons": ["", "", "", "", ""]
+  },
   "clock": {
     "format": "{:%I:%M %p} ",
     "interval": 1,   
