Hyprland. Change cursor and style

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,10 +44,8 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = waybar & hyprpaper
+exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 
 
 #############################
@@ -56,9 +54,8 @@ exec-once = waybar & hyprpaper
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
+# env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
 
 ###################
 ### PERMISSIONS ###
@@ -101,12 +98,12 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 5
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.9
-    inactive_opacity = 0.8
+    active_opacity = 1.0
+    inactive_opacity = 0.98
 
     shadow {
         enabled = true
@@ -117,11 +114,7 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
-        size = 3
-        passes = 2
-
-        vibrancy = 0.1696
+        enabled = false
     }
 }
 
