Helix - LSP off. Added nvim (not sure that will be used)

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -3,6 +3,9 @@ theme = "custom"
 [editor]
 line-number = "relative"
 
+[editor.lsp]
+enable = false
+
 [editor.cursor-shape]
 insert = "bar"
 normal = "block"
