--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -182,11 +182,9 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
+    kb_layout = us, us, ua
+    kb_variant = , dvorak, 
+    kb_options = grp:alt_shift_toggle
 
     follow_mouse = 1
 
