--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,7 +32,7 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
+$terminal = alacritty
 $fileManager = $terminal -e yazi
 $menu = wofi --show drun
 
