--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/rlllok/Media/Wallpapers/default_temple.jpg
-wallpaper = , /home/rlllok/Media/Wallpapers/default_temple.jpg
+preload = ~/Wallpapers/forest.jpg
+wallpaper = , ~/Wallpapers/forest.jpg
