--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -102,8 +102,8 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.92
-    inactive_opacity = 0.85
+    # active_opacity = 0.92
+    # inactive_opacity = 0.85
 
     shadow {
         enabled = true
@@ -182,8 +182,8 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us, us, ua
-    kb_variant = , dvorak, 
+    kb_layout = us, ua
+    kb_variant = ,  
     kb_options = grp:alt_shift_toggle
 
     follow_mouse = 1
