--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Wallpapers/forest.jpg
-wallpaper = , ~/Wallpapers/forest.jpg
+preload = ~/Wallpapers/moon.jpg
+wallpaper = , ~/Wallpapers/moon.jpg
