Changes. Added rofi

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,4 @@
-preload = ~/Wallpapers/moon.jpg
-wallpaper = , ~/Wallpapers/moon.jpg
+preload = ~/Wallpapers/cat_leaves.jpg
+wallpaper = , ~/Wallpapers/cat_leaves.jpg
+
+ipc = off
