Added rofi script

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Wallpapers/cat_leaves.jpg
-wallpaper = , ~/Wallpapers/cat_leaves.jpg
+preload = ~/Wallpapers/cat_leaves.png
+wallpaper = ,~/Wallpapers/cat_leaves.png
 
 ipc = off
