--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -222,14 +222,11 @@ cursor {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, exec, sh ~/.config/rofi/rofi_power.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
