--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -81,72 +81,51 @@ exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 4
-    gaps_out = 5
+  gaps_in = 4
+  gaps_out = 5
 
-    border_size = 2
-    col.active_border = rgba(e8b4b8ee)
+  border_size = 2
+  col.active_border = rgba(e8b4b8ee)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+  col.active_border   = rgba(FF8A95FF) rgba(E68A91FF) 45deg
+  col.inactive_border = rgba(E5E1DB88)
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    layout = dwindle
+  layout = dwindle
+  resize_on_border = true
+  extend_border_grab_area = 15
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 8
-    rounding_power = 2
-
-    # Change transparency of focused and unfocused windows
-    # active_opacity = 0.92
-    # inactive_opacity = 0.85
+    rounding = 12
 
     shadow {
         enabled = true
-        range = 2
-        render_power = 3
-        color = rgba(1a1a1aee)
+        range = 20
+        render_power = 4
+        color = rgba(00000033)
     }
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
       enabled = true
+      size = 10
+      passes = 3
       new_optimizations = true
+      ignore_opacity = true
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = true
+    bezier = easeOutQuint, 0.16, 1, 0.3, 1
+    bezier = easeInOutBack, 0.68, -0.55, 0.27, 1.55
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = windows,     1, 7, easeOutQuint, slide
+    animation = windowsOut,  1, 5, easeOutQuint, slide
+    animation = fade,        1, 8, easeOutQuint
+    animation = workspaces,  1, 8, easeOutQuint, slide
+    animation = border,      1, 10, easeOutQuint
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -199,7 +178,6 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
 }
 
 # Example per-device config
