--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Wallpapers/cat_leaves.png
-wallpaper = ,~/Wallpapers/cat_leaves.png
+preload = ~/Wallpapers/sakura.jpg
+wallpaper = ,~/Wallpapers/sakura.jpg
 
 ipc = off
