--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -85,10 +85,9 @@ general {
   gaps_out = 5
 
   border_size = 2
-  col.active_border = rgba(e8b4b8ee)
 
-  col.active_border   = rgba(FF8A95FF) rgba(E68A91FF) 45deg
-  col.inactive_border = rgba(E5E1DB88)
+  col.active_border   = rgb(fcbf3b)
+  col.inactive_border = rgb(40484c)
 
   layout = dwindle
   resize_on_border = true
