--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Wallpapers/sakura.jpg
-wallpaper = ,~/Wallpapers/sakura.jpg
+preload = ~/Wallpapers/forest.jpg
+wallpaper = ,~/Wallpapers/forest.jpg
 
 ipc = off
