--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,8 +1,11 @@
+[env]
+term = "alacritty"
+
 [general]
 live_config_reload = true
 
 [window]
-opacity = 0.9
+opacity = 1.0
 
 [font]
 size = 11.0
@@ -11,32 +14,29 @@ size = 11.0
 family = "Noto Sans Mono"
 style = "Regular"
 
-# Sakura Dawn – High-Contrast Light Theme
-# Perfect match for your Neovim setup, with super-visible cursor
-
 [colors.primary]
-background = "#FDFCF9"
-foreground = "#2C313A"
+background = "#32383b"
+foreground = "#f9e2af"
 
 [colors.normal]
-black   = "#E5E1DB"
-red     = "#D85A5A"    # ember_red
-green   = "#637B5F"    # bamboo_mist
-yellow  = "#C9B07F"    # sandstone_beige
-blue    = "#7A9FC7"    # pale_lotus_blue
-magenta = "#A67AB8"    # incense_purple
-cyan    = "#8A9DB6"    # river_slate
-white   = "#2C313A"
+black   = "#32383b"
+red     = "#f38ba8"
+green   = "#70abaf"
+yellow = "#00ff00"
+blue    = "#ff6542"
+magenta = "#ff0000"
+cyan  = "#fcbf3b"
+white   = "#0000ff"
 
 [colors.bright]
-black   = "#6B7380"
-red     = "#FF6B7A"
-green   = "#738F6F"
-yellow  = "#D9C28F"
-blue    = "#8AB0DB"
-magenta = "#B88FCA"
-cyan    = "#9AB0CC"
-white   = "#1E2229"
+black   = "#32383b"
+red     = "#f38ba8"
+green   = "#70abaf"
+yellow = "#00ff00"
+blue    = "#ff6542"
+magenta = "#ff0000"
+cyan  = "#fcbf3b"
+white   = "#0000ff"
 
 [colors.selection]
 text       = "#000000"
@@ -57,7 +57,6 @@ cursor = "#FF8A95"    # bright sakura pink – impossible to miss
 [colors.line_indicator]
 background = "#FFE6E8"   # subtle sakura-tinted current line
 
-# Optional: cursor style
 [cursor.style]
-shape = "Block"          # or "Beam" / "Underline"
-blinking = "Off"         # change to "On" if you like blinking
+shape = "Block"
+blinking = "Off"
