--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -81,13 +81,13 @@ exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-  gaps_in = 4
+  gaps_in = 2
   gaps_out = 5
 
-  border_size = 2
+  border_size = 0
 
-  col.active_border   = rgb(fcbf3b)
-  col.inactive_border = rgb(40484c)
+  #col.active_border   = rgb(fcbf3b)
+  #col.inactive_border = rgb(40484c)
 
   layout = dwindle
   resize_on_border = true
