--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,11 +8,10 @@ live_config_reload = true
 opacity = 1.0
 
 [font]
-size = 11.0
+size = 13.0
 
 [font.normal]
-family = "Noto Sans Mono"
-style = "Regular"
+family = "Monofur Nerd Font Mono"
 
 [colors.primary]
 background = "#32383b"
