--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Wallpapers/forest.jpg
-wallpaper = ,~/Wallpapers/forest.jpg
+preload = ~/Wallpapers/mucha.png
+wallpaper = ,~/Wallpapers/mucha.png
 
 ipc = off
