--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,14 +28,14 @@ decoration {
     rounding = 12
 
     shadow {
-        enabled = true
+        enabled = false
         range = 20
         render_power = 4
         color = rgba(00000033)
     }
 
     blur {
-      enabled = true
+      enabled = false
       size = 10
       passes = 3
       new_optimizations = true
@@ -48,10 +48,10 @@ animations {
     bezier = easeOutQuint, 0.16, 1, 0.3, 1
     bezier = easeInOutBack, 0.68, -0.55, 0.27, 1.55
 
-    animation = windows,     1, 7, easeOutQuint, slide
-    animation = windowsOut,  1, 5, easeOutQuint, slide
+    animation = windows,     1, 7, easeOutQuint, popin
+    animation = windowsOut,  1, 5, easeOutQuint, popin
     animation = fade,        1, 8, easeOutQuint
-    animation = workspaces,  1, 8, easeOutQuint, slide
+    animation = workspaces,  1, 8, easeOutQuint, slidefade
     animation = border,      1, 10, easeOutQuint
 }
 
@@ -69,6 +69,7 @@ misc {
   disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
   disable_splash_rendering = true
   focus_on_activate = true
+  vfr = true
 }
 
 # -- Input -----------------------------------------------------------
@@ -166,3 +167,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # -- Window Ruls -----------------------------------------------------
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# -- Env -------------------------------------------------------------
+env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
